--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,21 @@ body {
     text-align: center;
 }
 
+.text-style-editor{
+    width: 100%;
+    height: 30%;
+    background-color: #17a5a0;
+    border-radius: 30px;
+}
+
+.style-icon{
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+    border: 0;
+    background-color: white;
+}
+
 
 .hide {
     display: none;
