--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,13 @@
 :root {
     /* Pallet */
-    --clr-1:#079ab4;
-    --clr-2:#31bc72;
+    --clr-1: #079ab4;
+    --clr-2: #31bc72;
     /* BP */
 
 }
 
 * {
     box-sizing: border-box;
-    font-size: x-large;
 }
 
 /* TYPOGRAPHY */
@@ -17,6 +16,9 @@
     src: url(/fonts/Handwriting/FuzzyBubbles-Bold.ttf);
 }
 
+html {
+    font-size: 12px;
+}
 
 /* BASICS */
 
@@ -24,6 +26,7 @@ body {
     /* margin: 0; */
     background-color: #23252c;
     height: 100vh;
+
 }
 
 
@@ -70,17 +73,18 @@ body {
     height: 75px;
     background: linear-gradient(90deg, var(--clr-1), var(--clr-2));
     border-radius: 50px;
+    font-size: 1.5rem;
     color: white;
     font-family: FuzzyBubbles-Bold;
 }
 
 .logo {
-    font-size: 36px;
+    font-size: 2rem;
     padding-left: 10%;
 }
 
-.gallery-btn{
-    background:fixed;
+.gallery-btn {
+    background: fixed;
     border: 0;
 }
 
@@ -90,7 +94,7 @@ body {
 
 /* MAIN */
 
-.main-container{
+.main-container {
     background-color: #393b42;
     width: 95%;
     padding: 30px;
@@ -99,7 +103,8 @@ body {
 
 /* meme editor */
 
-.meme-editor {
+.meme-editor-container {
+    flex-direction: column-reverse;
     height: 550px;
     width: 100%;
 }
@@ -107,38 +112,45 @@ body {
 .edit-item {
     height: 100%;
     width: 45%;
-
     background-color: #373b41;
     border-radius: 10%;
 }
 
-.edit-section{
-
+.edit-section {
+    width: 100%;
+    padding: 3%;
 }
 
-.text-editor-input{
-    font-size: 35px;
+.text-editor-input {
+    font-size: 2.1875rem;
     width: 95%;
     border-radius: 30px;
     text-align: center;
 }
 
-.text-style-editor{
+.text-style-editor {
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     width: 100%;
     height: 30%;
     background-color: #17a5a0;
     border-radius: 30px;
 }
 
-.style-icon{
-    width: 50px;
-    height: 50px;
+.style-icon {
+    max-width: 50px;
+    max-height: 50px;
     border-radius: 10px;
     border: 0;
     background-color: white;
     box-shadow: 0px 3px 5px 0px rgb(82, 82, 82);
 }
 
+
+.canvas-container {
+    width: 100%;
+    height: 100%;
+}
 
 .hide {
     display: none;
@@ -154,38 +166,174 @@ body {
     width: 100%;
 }
 
-
-.search-photo-input {
-    width: 40%;
+.menu-first-section {
+    width: 100%;
 }
 
-.menu-area-item {
-    border-radius: 30px;
-    font-size: larger;
-    padding: 5px;
-    margin-bottom: 10px;
+.search-photo-input {
+    width: 100%;
+    height: 4rem;
+}
+
+.menu-second-section {
+    width: 100%;
 }
 
 .choose-from-txt {
     background-color: #87898d;
     color: white;
-    font-size: xx-large;
+    width: 77%;
+    height: auto;
 }
 
-.gallery-area{
+.more-btn {
+    background: linear-gradient(90deg, var(--clr-1), var(--clr-2));
+    width: 18%;
+    height: 2.5rem;
+    min-width: max-content;
+}
+
+
+.menu-area-item {
+    border-radius: 30px;
+    font-size: 1.5rem;
+    padding: 5px;
+    /* width: 100%; */
+    margin-bottom: 10px;
+}
+
+.menu-area {
+    margin-bottom: 3%;
+}
+
+
+.gallery-area {
     display: grid;
     width: 100%;
     height: 90%;
-    gap: 30px;
+    gap: 10px;
     object-fit: cover;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     /* grid-template-rows: repeat(auto-fill, 1fr); */
     justify-items: center;
 }
 
-.grid-img{
+.grid-img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
+}
+
+/* SMALL */
+
+@media (min-width:420px) {
+
+    .gallery-area {
+        gap: 15px;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .canvas-container {
+        width: 100%;
+        height: 100%;
+    }
+    .menu-area-item {
+        border-radius: 30px;
+        font-size: 1.8rem;
+        padding: 5px;
+        /* width: 100%; */
+        margin-bottom: 10px;
+    }
+    .more-btn {
+        background: linear-gradient(90deg, var(--clr-1), var(--clr-2));
+        width: 18%;
+        height: fit-content;
+        min-height: 3rem;
+        /* min-width: max-content; */
+    }
+}
+
+/* MEDIUM */
+
+@media (min-width:840px) {
+    html {
+        font-size: 14px;
+    }
+
+    .gallery-area {
+        gap: 20px;
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .menu-area {
+        flex-direction: row;
+    }
+
+    .menu-first-section {
+        width: 45%;
+    }
+
+    .menu-second-section {
+        width: 52%;
+    }
+
+    .choose-from-txt {
+        width: 77%;
+        min-height: 3rem;
+        height: auto;
+    }
+
+    .canvas-container {
+        width: 400px;
+        height: 400px;
+    }
+
+    .meme-editor-container {
+        flex-direction: row;
+    }
+}
+
+/* LARGE */
+
+@media (min-width:1020px) {
+    html {
+        font-size: 16px;
+    }
+
+    .gallery-area {
+        gap: 30px;
+        grid-template-columns: repeat(5, 1fr);
+    }
+
+    .meme-editor-container {
+        flex-direction: row;
+    }
+
+    .canvas-container {
+        width: 500px;
+        height: 500px;
+    }
+
+    .edit-item {
+        height: 100%;
+        width: 45%;
+        background-color: #373b41;
+        border-radius: 10%;
+    }
+    .text-style-editor {
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-areas: 
+        "up-btn up-btn up-btn up-btn up-btn"
+        "down-left-btn down-middle down-right"
+        ;
+        gap: 15px;
+        width: 100%;
+        height: 30%;
+        background-color: #17a5a0;
+        border-radius: 30px;   
+    }
+
+    
 }
