--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,6 @@ body {
     /* margin: 0; */
     background-color: #23252c;
     height: 100vh;
-
 }
 
 
@@ -105,8 +104,8 @@ body {
 
 .meme-editor-container {
     flex-direction: column-reverse;
-    height: 550px;
-    width: 100%;
+    height: 120vh;
+    justify-content: space-evenly;
 }
 
 .edit-item {
@@ -128,6 +127,32 @@ body {
     text-align: center;
 }
 
+
+.update-text-stracture-btns{
+    width: 100%;
+}
+
+.text-stracture-icon{
+    max-width: 60px;
+    max-height: 60px;
+}
+
+.text-stracture-btn{
+    border-radius: 10px;
+}
+
+.switch-lines{
+    background-color: rgb(47, 168, 209);
+}
+
+.add-line{
+    background-color: #31bc72;
+}
+
+.delete-meme{
+    background-color: rgb(198, 50, 48);
+}
+
 .text-style-editor {
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -135,6 +160,12 @@ body {
     height: 30%;
     background-color: #17a5a0;
     border-radius: 30px;
+}
+
+.label-style-icon{
+    display: grid;
+    align-items: center;
+    justify-items: center;
 }
 
 .style-icon {
@@ -145,6 +176,45 @@ body {
     background-color: white;
     box-shadow: 0px 3px 5px 0px rgb(82, 82, 82);
 }
+
+.fonts{
+    font-size: 1.5em;
+    border-radius: 30px;
+}
+
+
+.share-download{
+    width: 100%;
+}
+
+.bottom-btn{
+    border-radius: 10px;
+    color: white;
+    width: 35%;
+    padding: 10px;
+    font-size: 1.5em;
+}
+
+.share-btn{
+    background: linear-gradient(deepskyblue, rgb(43, 97, 233))
+}
+
+.share-container{
+    background-color: #fff;
+    font-size: 1.5em;
+}
+
+.user-msg{
+    color: white;
+    font-size: 1.2em;
+}
+
+.download-btn{
+    background: linear-gradient(rgb(223, 113, 245),purple);
+}
+
+
+/* canvas */
 
 
 .canvas-container {
@@ -233,10 +303,22 @@ body {
         gap: 15px;
         grid-template-columns: repeat(2, 1fr);
     }
-
-    .canvas-container {
+    body{
+        height: 100vh;
+        justify-content: space-evenly;
+    }
+    .meme-editor-container{
+        height: 550px;
         width: 100%;
-        height: 100%;
+    }
+    .canvas-container {
+        width: 80%;
+        height: 50vh;
+    }
+    
+    .edit-section{
+        width: 400px;
+        height: 400px;
     }
     .menu-area-item {
         border-radius: 30px;
@@ -288,9 +370,15 @@ body {
         width: 400px;
         height: 400px;
     }
-
+    
+    .edit-section{
+        width: 400px;
+        height: 400px;
+    }
     .meme-editor-container {
         flex-direction: row;
+        height: 550px;
+        width: 100%;
     }
 }
 
@@ -299,6 +387,9 @@ body {
 @media (min-width:1020px) {
     html {
         font-size: 16px;
+    }
+    body{
+        height: 100vh;
     }
 
     .gallery-area {
@@ -328,12 +419,9 @@ body {
         "up-btn up-btn up-btn up-btn up-btn"
         "down-left-btn down-middle down-right"
         ;
-        gap: 15px;
         width: 100%;
         height: 30%;
         background-color: #17a5a0;
         border-radius: 30px;   
     }
-
-
 }
