--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,14 @@ body {
     border: 0;
 }
 
+.gallery-btn:hover{
+    background-color: #00880c79;
+    cursor: pointer;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 2px;
+}
+
 .nav-area {
     flex-basis: 50%;
 }
@@ -153,21 +161,6 @@ body {
     background-color: rgb(198, 50, 48);
 }
 
-.text-style-editor {
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    width: 100%;
-    height: 30%;
-    background-color: #17a5a0;
-    border-radius: 30px;
-}
-
-.label-style-icon{
-    display: grid;
-    align-items: center;
-    justify-items: center;
-}
-
 .style-icon {
     max-width: 50px;
     max-height: 50px;
@@ -177,11 +170,65 @@ body {
     box-shadow: 0px 3px 5px 0px rgb(82, 82, 82);
 }
 
+
+.text-style-editor {
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas: 
+    "up-btn up-btn up-btn up-btn up-btn"
+    "down-left-btn down-middle down-right"
+    ;
+    width: 100%;
+    height: 30%;
+    background-color: #17a5a0;
+    border-radius: 30px;   
+}
+.increase-font{
+    grid-area: up-btn;
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.decrease-font{
+    grid-area: up-btn;
+    grid-column: 2;
+    grid-row: 1;
+}
+
+.align-to-left{
+    grid-area: up-btn;
+    grid-column: 3;
+    grid-row: 1;
+}
+.align-center{
+    grid-area: up-btn;
+    grid-column: 4;
+    grid-row: 1;
+}
+
+.align-to-right{
+    grid-area: up-btn;
+    grid-column: 5;
+    grid-row: 1;
+}
+.fonts{
+    grid-area: down-left-btn;
+    grid-column: 1/4;
+    grid-row: 2;
+}
+.label-style-icon{
+    display: grid;
+    align-items: center;
+    justify-items: center;
+}
+
+
+
 .fonts{
     font-size: 1.5em;
     border-radius: 30px;
+    text-align: center;
 }
-
 
 .share-download{
     width: 100%;
@@ -191,7 +238,7 @@ body {
     border-radius: 10px;
     color: white;
     width: 35%;
-    padding: 10px;
+    padding: 8px;
     font-size: 1.5em;
 }
 
@@ -308,7 +355,7 @@ body {
         justify-content: space-evenly;
     }
     .meme-editor-container{
-        height: 550px;
+        height: 120vh;
         width: 100%;
     }
     .canvas-container {
@@ -317,8 +364,8 @@ body {
     }
     
     .edit-section{
-        width: 400px;
-        height: 400px;
+        width: 80%;
+        height: 60%;
     }
     .menu-area-item {
         border-radius: 30px;
@@ -333,6 +380,51 @@ body {
         height: fit-content;
         min-height: 3rem;
         /* min-width: max-content; */
+    }
+    .text-style-editor {
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-areas: 
+        "up-btn up-btn up-btn up-btn up-btn"
+        "down-left-btn down-middle down-right"
+        ;
+        width: 100%;
+        height: 30%;
+        background-color: #17a5a0;
+        border-radius: 30px;   
+    }
+    .increase-font{
+        grid-area: up-btn;
+        grid-column: 1;
+        grid-row: 1;
+    }
+    
+    .decrease-font{
+        grid-area: up-btn;
+        grid-column: 2;
+        grid-row: 1;
+    }
+    
+    .align-to-left{
+        grid-area: up-btn;
+        grid-column: 3;
+        grid-row: 1;
+    }
+    .align-center{
+        grid-area: up-btn;
+        grid-column: 4;
+        grid-row: 1;
+    }
+    
+    .align-to-right{
+        grid-area: up-btn;
+        grid-column: 5;
+        grid-row: 1;
+    }
+    .fonts{
+        grid-area: down-left-btn;
+        grid-column: 1/4;
+        grid-row: 2;
     }
 }
 
@@ -380,11 +472,69 @@ body {
         height: 550px;
         width: 100%;
     }
+    .edit-item{
+        padding: 4px;
+    }
+    .text-style-editor{
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-areas: 
+        "up-btn up-btn up-btn up-btn up-btn"
+        "down-left-btn down-middle down-right"
+        ;
+        width: 100%;
+        height: 50%;
+        background-color: #17a5a0;
+        border-radius: 30px;   
+    }
+    .increase-font{
+        grid-area: up-btn;
+        grid-column: 1;
+        grid-row: 1;
+    }
+    
+    .decrease-font{
+        grid-area: up-btn;
+        grid-column: 2;
+        grid-row: 1;
+    }
+    
+    .align-to-left{
+        grid-area: up-btn;
+        grid-column: 3;
+        grid-row: 1;
+    }
+    .align-center{
+        grid-area: up-btn;
+        grid-column: 4;
+        grid-row: 1;
+    }
+    
+    .align-to-right{
+        grid-area: up-btn;
+        grid-column: 5;
+        grid-row: 1;
+    }
+    .fonts{
+        grid-area: down-left-btn;
+        grid-column: 1/4;
+        grid-row: 2;
+    }
+    .bottom-btn{
+        border-radius: 8px;
+        color: white;
+        width: 40%;
+        padding: 6px;
+        font-size: 1.5em;
+    }
+    
+
 }
 
 /* LARGE */
 
 @media (min-width:1020px) {
+    
     html {
         font-size: 16px;
     }
@@ -423,5 +573,45 @@ body {
         height: 30%;
         background-color: #17a5a0;
         border-radius: 30px;   
+    }
+    .increase-font{
+        grid-area: up-btn;
+        grid-column: 1;
+        grid-row: 1;
+    }
+    
+    .decrease-font{
+        grid-area: up-btn;
+        grid-column: 2;
+        grid-row: 1;
+    }
+    
+    .align-to-left{
+        grid-area: up-btn;
+        grid-column: 3;
+        grid-row: 1;
+    }
+    .align-center{
+        grid-area: up-btn;
+        grid-column: 4;
+        grid-row: 1;
+    }
+    
+    .align-to-right{
+        grid-area: up-btn;
+        grid-column: 5;
+        grid-row: 1;
+    }
+    .fonts{
+        grid-area: down-left-btn;
+        grid-column: 1/4;
+        grid-row: 2;
+    }
+    .bottom-btn{
+        border-radius: 10px;
+        color: white;
+        width: 35%;
+        padding: 8px;
+        font-size: 1.5em;
     }
 }
