--- a/css/main.css
+++ b/css/main.css
@@ -8,12 +8,19 @@
 
 * {
     box-sizing: border-box;
+    border: 0;
 }
 
 /* TYPOGRAPHY */
 @font-face {
     font-family: 'FuzzyBubbles-Bold';
     src: url(./../fonts/Handwriting/FuzzyBubbles-Bold.ttf);
+}
+
+@font-face {
+    font-family: 'Merriweather';
+    src:  url('https://fonts.googleapis.com/css2?family=Merriweather:ital@1&display=swap');
+
 }
 
 html {
@@ -68,7 +75,7 @@ body {
 
 /* Header */
 .head {
-    width: 100%;
+    width: 95%;
     height: 75px;
     background: linear-gradient(90deg, var(--clr-1), var(--clr-2));
     font-size: 1.5rem;
@@ -76,9 +83,14 @@ body {
     font-family: FuzzyBubbles-Bold;
 }
 
+.nav-bar{
+    width: 100%;
+}
+
 .logo {
     font-size: 2rem;
-    padding-left: 10%;
+    padding-left: 3%;
+    width: 65%;
 }
 
 .gallery-btn {
@@ -96,6 +108,17 @@ emoji-picker {
     height: 20%;
 }
 
+
+.emojis-container{
+    padding: 0;
+}
+
+.emojis-container > *{
+    list-style: none;
+    font-size: 1.8rem;
+    cursor: pointer;
+}
+
 .clicked {
     background: rgba(217, 217, 217, 0.598);
     font-size: 1.8rem;
@@ -108,9 +131,6 @@ emoji-picker {
     border-radius: 10px;
 }
 
-.nav-area {
-    flex-basis: 50%;
-}
 
 /* MAIN */
 
@@ -119,7 +139,31 @@ emoji-picker {
     width: 95%;
     padding: 30px;
     border-radius: 15px;
+    margin-top: 2vh;
 }
+
+/* SCROLLER */
+
+.scroller {
+    scrollbar-width: thin;
+    scrollbar-color: #1eaa94 #22252c;
+    overflow-y: scroll;
+}
+.scroller::-webkit-scrollbar {
+    width: 16px;
+}
+
+.scroller::-webkit-scrollbar-track {
+    background: #393b42;
+    border-radius: 13px;
+}
+
+.scroller::-webkit-scrollbar-thumb {
+    background-color: #1eaa94;
+    border-radius: 13px;
+    border: 1px solid #393737;
+}
+
 
 /* meme editor */
 
@@ -129,11 +173,17 @@ emoji-picker {
     justify-content: space-evenly;
 }
 
+.a-tag{
+    text-decoration: none;
+    color: white;
+}
+
 .edit-item {
-    height: 100%;
-    width: 45%;
+    height: 400px;
+    width: 400px;
     background-color: #373b41;
     border-radius: 10%;
+    margin: 15px 0;
 }
 
 .edit-section {
@@ -146,11 +196,13 @@ emoji-picker {
     width: 95%;
     border-radius: 30px;
     text-align: center;
+    font-family: 'Merriweather';
 }
 
 
 .update-text-stracture-btns {
     width: 100%;
+    margin: 10px 0;
 }
 
 .text-stracture-icon {
@@ -161,6 +213,10 @@ emoji-picker {
 .text-stracture-btn {
     border-radius: 10px;
     cursor: pointer;
+} 
+
+.text-stracture-btn:hover{
+    opacity: 85%;
 }
 
 .switch-lines {
@@ -179,9 +235,13 @@ emoji-picker {
     max-width: 50px;
     max-height: 50px;
     border-radius: 10px;
-    border: 0;
     background-color: white;
+    padding: 5px;
     box-shadow: 0px 3px 5px 0px rgb(82, 82, 82);
+}
+
+.style-icon:hover{
+    opacity: 85%;
 }
 
 
@@ -196,6 +256,7 @@ emoji-picker {
     height: 40%;
     background-color: #17a5a0;
     border-radius: 30px;
+    gap: 5px;
 }
 
 .increase-font {
@@ -232,6 +293,11 @@ emoji-picker {
     grid-area: down-left-btn;
     grid-column: 1/4;
     grid-row: 2;
+    font-size: 1.5em;
+    border-radius: 30px;
+    text-align: center;
+    margin: 10px;
+    /* width: 80%; */
 }
 
 .label-style-icon {
@@ -242,22 +308,28 @@ emoji-picker {
 }
 
 .fonts {
-    font-size: 1.5em;
-    border-radius: 30px;
-    text-align: center;
 }
 
 .share-download {
     width: 100%;
+    min-height: 15%;
+
 }
 
 .bottom-btn {
     cursor: pointer;
     border-radius: 10px;
     color: white;
-    width: 35%;
+    width: 25%;
     padding: 8px;
-    font-size: 1.5em;
+    font-size: 1.2em;
+    gap: 2px;
+    height: 70%;
+    font-family: 'Merriweather';
+}
+
+.bottom-btn:hover{
+    opacity: 85%;
 }
 
 .share-btn {
@@ -278,6 +350,13 @@ emoji-picker {
     background: linear-gradient(rgb(223, 113, 245), purple);
 }
 
+.save-meme{
+    background: linear-gradient(deepskyblue, rgb(43, 97, 233))
+}
+
+.save-icon{
+    height: 1.2rem;
+}
 
 /* canvas */
 
@@ -308,11 +387,6 @@ emoji-picker {
 
 .menu-first-section {
     width: 100%;
-}
-
-.search-photo-input {
-    width: 100%;
-    height: 4rem;
 }
 
 .menu-second-section {
@@ -351,9 +425,16 @@ emoji-picker {
     border-radius: 30px;
     font-size: 1.5rem;
     padding: 5px;
-    /* width: 100%; */
     margin-bottom: 10px;
+    font-family: 'Merriweather';
 }
+
+.menu-area-item.search-photo-input {
+    width: 100%;
+    height: 4rem;
+    padding-left: 5%;
+}
+
 
 .menu-area {
     margin-bottom: 3%;
@@ -377,8 +458,10 @@ emoji-picker {
     cursor: pointer;
     object-fit: cover;
     border-radius: 10px;
-    box-shadow: 1px 3px 4px 2px rgb(182, 182, 182);
-
+}
+.grid-img:hover{
+    /* box-shadow: 1px 2px 2px 1px rgb(0, 0, 0); */
+    opacity: 80%;
 }
 
 /* Saved-memes area */
@@ -397,6 +480,34 @@ emoji-picker {
     box-shadow: 1px 3px 4px 2px rgb(182, 182, 182);
 }
 
+
+footer{
+    margin: 0;
+    margin-top: 20px;
+    background: linear-gradient(90deg, var(--clr-1), var(--clr-2));
+    font-size: 1.5rem;
+    color: white;
+    width: 95%;
+    border-radius: 50px;
+    height: 100px;
+    padding: 4px;
+}
+
+footer > .icon{
+    width: 50px;
+    height: 50px;
+}
+
+.p-container{
+    text-align: center;
+    margin: 5px;
+}
+
+
+.icons-container{
+    margin: 5px;
+    gap: 20px;
+}
 /* SMALL */
 
 @media (min-width:420px) {
@@ -405,6 +516,11 @@ emoji-picker {
         width: 190px;
         height: 190px;
     }
+
+    .nav-area {
+        flex-basis: 50%;
+    }
+    
 
     .gallery-area {
         gap: 15px;
@@ -447,27 +563,43 @@ emoji-picker {
     }
 }
 
+
+@media (min-width:620px){
+    .canvas-container {
+        height: 400px;
+        width: 400px;
+    }
+
+    .edit-section {
+        height: 400px;
+        width: 400px;
+    }
+}
+
+
 @media (max-width:840px) {
 
+    
     body.open-menu.nav-links {
         pointer-events: auto;
         flex-direction: column;
+        transition: .6s;
     }
-
+    
     body.open-menu .nav-links {
-        transform: translateY(88px);
+        border-radius: 0 0 0 15px;
+        transform: translateY(163px);
         transition: .6s;
         align-items: center;
         background: linear-gradient(var(--clr-1), var(--clr-2));
-        height: 100px;
+        height: 250px;
     }
 
     .nav-links {
-        width: 50%;
+        width: calc(40%);
         position: absolute;
         transform: translateY(calc(-90*3px));
-        flex-basis: 100%;
-        right: 8px;
+        right: calc(10px + 2%);
         overflow: hidden;
         z-index: 10;
         opacity: 100%;
@@ -524,6 +656,9 @@ emoji-picker {
         color: white;
         font-family: FuzzyBubbles-Bold;
     }
+    .nav-bar.head{
+        width: 100%;
+    }
 
     .menu-second-section {
         width: 52%;
@@ -562,9 +697,9 @@ emoji-picker {
     .bottom-btn {
         border-radius: 8px;
         color: white;
-        width: 40%;
-        padding: 6px;
-        font-size: 1.5em;
+        width: 25%;
+        padding: 4px;
+        font-size: 1.2em;
     }
 }
 
@@ -595,8 +730,8 @@ emoji-picker {
     }
 
     .edit-section {
-        height: 100%;
-        width: 45%;
+        width: 500px;
+        height: 500px;
         background-color: #373b41;
         border-radius: 10%;
     }
@@ -605,11 +740,15 @@ emoji-picker {
         height: 30%;
     }
 
+    .nav-area {
+        flex-basis: 40%;
+    }
+    
     .bottom-btn {
         border-radius: 10px;
         color: white;
-        width: 35%;
+        width: 28%;
         padding: 8px;
-        font-size: 1.5em;
+        font-size: 1.2em;
     }
 }
