--- a/css/main.css
+++ b/css/main.css
@@ -202,12 +202,12 @@ emoji-picker {
 
 .update-text-stracture-btns {
     width: 100%;
-    margin: 10px 0;
+    margin: 10px 4px;
 }
 
 .text-stracture-icon {
-    max-width: 60px;
-    max-height: 60px;
+    max-width: 55px;
+    max-height: 55px;
 }
 
 .text-stracture-btn {
@@ -219,7 +219,9 @@ emoji-picker {
     opacity: 85%;
 }
 
-.switch-lines {
+
+
+.switch-lines, .drag-down , .drag-up{
     background: linear-gradient(rgb(73, 208, 253), rgb(0, 64, 255));
 }
 
@@ -256,7 +258,7 @@ emoji-picker {
     height: 40%;
     background-color: #17a5a0;
     border-radius: 30px;
-    gap: 5px;
+    gap: 2px;
 }
 
 .increase-font {
@@ -297,7 +299,6 @@ emoji-picker {
     border-radius: 30px;
     text-align: center;
     margin: 10px;
-    /* width: 80%; */
 }
 
 .label-style-icon {
@@ -528,7 +529,8 @@ footer > .icon{
     }
 
     body {
-        height: 120vh;
+        height: 100vh;
+        /* here */
         justify-content: space-evenly;
     }
 
@@ -579,7 +581,6 @@ footer > .icon{
 
 @media (max-width:840px) {
 
-    
     body.open-menu.nav-links {
         pointer-events: auto;
         flex-direction: column;
