--- a/css/main.css
+++ b/css/main.css
@@ -240,10 +240,12 @@ emoji-picker {
     background-color: white;
     padding: 5px;
     box-shadow: 0px 3px 5px 0px rgb(82, 82, 82);
+    z-index: 3;
 }
 
 .style-icon:hover{
     opacity: 85%;
+    cursor: pointer;
 }
 
 
@@ -305,7 +307,6 @@ emoji-picker {
     display: grid;
     align-items: center;
     justify-items: center;
-    cursor: pointer;
 }
 
 .fonts {
