--- a/css/main.css
+++ b/css/main.css
@@ -491,13 +491,17 @@ footer{
     color: white;
     width: 95%;
     border-radius: 50px;
-    height: 100px;
+    height: max-content;
     padding: 4px;
 }
 
-footer > .icon{
-    width: 50px;
-    height: 50px;
+.my-photo{
+    border-radius: 50%;
+}
+
+.icon{
+    width: 30px;
+    height: 30px;
 }
 
 .p-container{
@@ -509,6 +513,11 @@ footer > .icon{
 .icons-container{
     margin: 5px;
     gap: 20px;
+    background-color: white;
+    border-radius: 50px;
+    width: 200px;
+    height: 50px;
+    opacity: 90%;
 }
 /* SMALL */
 
